# adv-trainings-2021

./: .bazelrc  .gitignore  CMakeLists.txt  README.part1.md  README.sockets.md  WORKSPACE
src/: BUILD.bazel
src/drivetrain/: BUILD.bazel  drivetrain.cc  drivetrain.hh  drivetrain_test.cc
src/examples/: BUILD.bazel  tests.cc
src/manager/: BUILD.bazel  manager.cc  manager.hh  manager_main.cc
src/util/: BUILD.bazel  test_hook.py  util.cc  util.hh  util_test.cc
